--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/swarajban/npm-cache/issues"
   },
-  "homepage": "https://github.com/swarajban/npm-cache"
+  "homepage": "https://github.com/swarajban/npm-cache",
+  "dependencies": {
+    "MD5": "^1.2.1",
+    "lodash": "^2.4.1"
+  }
 }
