--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
-# Logs
-logs
-*.log
-
-# Runtime data
-pids
-*.pid
-*.seed
-
-
 # Dependency directory
 # Deployed apps should consider commenting this line out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
@@ -16,3 +6,7 @@ node_modules
 # IntelliJ Project Files
 .idea/
 npm-cache.iml
+
+
+# Tmp Directory
+tmp/
