--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "npm-cache",
   "version": "0.0.1",
-  "description": "cache npm installs to local machine",
+  "description": "cache dependency manager installs to local machine",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -10,8 +10,10 @@
   "keywords": [
     "npm",
     "cache",
-    "npm",
-    "install"
+    "install",
+    "bower",
+    "composer",
+    "local"
   ],
   "author": "swaraj",
   "private": true,
@@ -22,8 +24,6 @@
   "homepage": "https://github.com/swarajban/npm-cache",
   "dependencies": {
     "MD5": "^1.2.1",
-    "lodash": "^2.4.1",
-    "shelljs": "^0.3.0",
-    "tar.gz": "^0.1.1"
+    "shelljs": "^0.3.0"
   }
 }
