--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/swarajban/npm-cache",
   "dependencies": {
     "MD5": "^1.2.1",
+    "async": "^0.9.0",
     "nomnom": "^1.8.0",
     "shelljs": "^0.3.0"
   },
