--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "MD5": "^1.2.1",
     "async": "^0.9.0",
+    "glob": "^4.0.3",
     "nomnom": "^1.8.0",
     "shelljs": "^0.3.0"
   },
