--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "MD5": "^1.2.1",
     "async": "^0.9.0",
     "glob": "^4.0.3",
+    "lodash": "^3.5.0",
     "nomnom": "^1.8.0",
     "shelljs": "^0.3.0"
   },
