--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "async": "0.9.0",
     "glob": "5.0.3",
     "lodash": "3.5.0",
-    "nomnom": "1.8.1",
+    "nomnom": "swarajban/nomnom",
     "shelljs": "0.4.0"
   },
   "preferGlobal": true,
