--- a/.jshintrc
+++ b/.jshintrc
@@ -6,7 +6,7 @@
   "eqeqeq": true,
   "indent": 2,
   "immed": true,
-  "latedef": true,
+  "latedef": false,
   "newcap": true,
   "noarg": true,
   "quotmark": "single",
