--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   "dependencies": {
     "MD5": "1.2.1",
     "async": "0.9.0",
-    "glob": "5.0.3",
+    "glob": "5.0.10",
     "lodash": "3.5.0",
-    "nomnom": "swarajban/nomnom",
-    "shelljs": "0.4.0"
+    "nomnom": "1.8.1",
+    "shelljs": "0.5.1"
   },
   "preferGlobal": true,
   "bin": {
