--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "async": "1.5.0",
     "fs-extra": "^0.26.2",
+    "fstream": "^1.0.8",
     "glob": "6.0.1",
     "lodash": "3.10.1",
     "md5": "2.0.0",
