--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nomnom": "1.8.1",
     "shelljs": "0.5.3",
     "tar": "^2.2.1",
+    "tmp": "^0.0.28",
     "which": "^1.2.0"
   },
   "preferGlobal": true,
