--- a/package.json
+++ b/package.json
@@ -31,13 +31,12 @@
   "dependencies": {
     "async": "1.5.0",
     "fs-extra": "^0.26.2",
-    "fstream": "^1.0.8",
     "glob": "6.0.1",
     "lodash": "3.10.1",
     "md5": "2.0.0",
     "nomnom": "1.8.1",
     "shelljs": "0.5.3",
-    "tar": "^2.2.1",
+    "tar-fs": "^1.13.0",
     "tmp": "^0.0.28",
     "which": "^1.2.0"
   },
