incorporate pr #71 - move from node-tar to tar-fs

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "md5": "2.0.0",
     "nomnom": "1.8.1",
     "shelljs": "0.5.3",
-    "tar": "^2.2.1",
+    "tar-fs": "1.14.0",
     "tmp": "^0.0.28",
     "which": "^1.2.0"
   },
