fixed clean now that we allow not archiving cached deps

--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "async": "1.5.0",
     "fs-extra": "^0.26.2",
     "fstream": "^1.0.8",
-    "glob": "6.0.1",
     "lodash": "3.10.1",
     "md5": "2.0.0",
     "nomnom": "1.8.1",
+    "rimraf": "^2.5.4",
     "shelljs": "0.5.3",
     "tar-fs": "1.14.0",
     "tmp": "^0.0.28",
