--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "npm-cache",
-  "version": "0.6.5",
-  "description": "cache dependency manager installs to local machine",
+  "name": "npm-cache-flow",
+  "version": "0.6.6",
+  "description": "cache dependency manager installs to local machine - respects commandline args and deals with npm --production args etc.",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/swarajban/npm-cache.git"
+    "url": "git://github.com/klh/npm-cache.git"
   },
   "keywords": [
     "npm",
@@ -21,6 +21,10 @@
     {
       "name": "Aaron Nordyke",
       "email": "aaron.nordyke@gmail.com"
+    },
+        {
+      "name": "Klaus Hougesen",
+      "email": "Klaus.Hougesen@gmail.com"
     }
   ],
   "license": "MIT",
@@ -29,21 +33,23 @@
   },
   "homepage": "https://github.com/swarajban/npm-cache",
   "dependencies": {
-    "async": "1.5.0",
-    "fs-extra": "^0.26.2",
-    "fstream": "^1.0.8",
-    "lodash": "3.10.1",
-    "md5": "2.0.0",
+    "async": "2.1.4",
+    "cli-color": "^1.1.0",
+    "fs-extra": "2.0.0",
+    "fstream": "1.0.8",
+    "lodash": "4.17",
+    "log-symbols": "^1.0.2",
+    "md5": "2.2",
     "nomnom": "1.8.1",
     "rimraf": "^2.5.4",
-    "shelljs": "0.5.3",
-    "tar-fs": "1.14.0",
-    "tmp": "^0.0.28",
-    "which": "^1.2.0",
-    "upath":"^0.2.0"
+    "shelljs": "0.6",
+    "tar-fs": "1.15.0",
+    "tmp": "^0.0.31",
+    "upath": "^0.2.0",
+    "which": "^1.2.0"
   },
   "preferGlobal": true,
   "bin": {
-    "npm-cache": "index.js"
+    "npm-cache-flow": "index.js"
   }
 }
