use semver for checking dependency version

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "md5": "2.2",
     "nomnom": "1.8.1",
     "rimraf": "^2.5.4",
+    "semver": "^5.5.0",
     "shelljs": "0.6",
     "tar-fs": "1.15.0",
     "tmp": "^0.0.31",
